--- a/src/app/producto/listar-pro/listar-pro.component.html
+++ b/src/app/producto/listar-pro/listar-pro.component.html
@@ -1,1 +1,31 @@
-<p>listar-pro works!</p>
+<div class="mat-elevation-z8">
+    <table mat-table [dataSource]="resultados">
+  
+      <!-- id Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> ID </th>
+        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      </ng-container>
+  
+      <!-- nombres Column -->
+      <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef> Nombres </th>
+        <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+      </ng-container>
+  
+      <!-- caracteristicas Column -->
+      <ng-container matColumnDef="caracteristica">
+        <th mat-header-cell *matHeaderCellDef> Caracteristica </th>
+        <td mat-cell *matCellDef="let element"> {{element.caracteristica}} </td>
+      </ng-container>
+                          
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                   showFirstLastButtons 
+                   aria-label="Select page of periodic elements">
+    </mat-paginator>
+  </div>
+  
