--- a/src/app/compartidos/header/header.component.html
+++ b/src/app/compartidos/header/header.component.html
@@ -9,31 +9,25 @@
     <!-- empleado -->
     <button mat-button color="accent" [matMenuTriggerFor]="empleado">Empleado</button>
     <mat-menu #empleado="matMenu">
-      <button mat-menu-item routerLink="/cliente/listado" >Lista</button>
-      <button mat-menu-item>Agregar</button>
+      <button mat-menu-item routerLink="/empleado/listado" >Lista</button>
+      <button mat-menu-item routerLink="/empleado/agregar">Agregar</button>
     </mat-menu>
     <!-- producto -->
     <button mat-button color="accent" [matMenuTriggerFor]="producto">Producto</button>
 <mat-menu #producto="matMenu">
-  <button mat-menu-item>Lista</button>
-  <button mat-menu-item>Agregar</button>
+  <button mat-menu-item routerLink="/producto/listado">Lista</button>
+  <button mat-menu-item routerLink="/producto/agregar">Agregar</button>
 </mat-menu>
 <!-- cliente -->
 <button mat-button color="accent" [matMenuTriggerFor]="cliente">Cliente</button>
 <mat-menu #cliente="matMenu">
-  <button mat-menu-item routerLink="cliente/listado"  >Lista</button>
-  <button mat-menu-item>Agregar</button>
+  <button mat-menu-item routerLink="/cliente/listado"  >Lista</button>
+  <button mat-menu-item routerLink="/cliente/agregar" >Agregar</button>
 </mat-menu>
 <!-- remision -->
-<button mat-button color="accent" [matMenuTriggerFor]="remision">Remisiòn</button>
-<mat-menu #remision="matMenu">
-  <button mat-menu-item>Lista</button>
-  <button mat-menu-item>Agregar</button>
-</mat-menu>
-   
-   
-   
-   
-   
-   
-  </mat-toolbar>
+<!-- <button mat-button color="accent" [matMenuTriggerFor]="remision">Remisiòn</button> -->
+<!-- <mat-menu #remision="matMenu"> -->
+  <!-- <button mat-menu-item routerLink="/remision/listado" >Lista</button> -->
+  <!-- <button mat-menu-item routerLink="/remision/agregar">Agregar</button> -->
+<!-- </mat-menu> -->
+</mat-toolbar>
