--- a/src/app/compartidos/header/header.component.html
+++ b/src/app/compartidos/header/header.component.html
@@ -25,9 +25,9 @@
   <button mat-menu-item routerLink="/cliente/agregar" >Agregar</button>
 </mat-menu>
 <!-- remision -->
-<!-- <button mat-button color="accent" [matMenuTriggerFor]="remision">Remisiòn</button> -->
-<!-- <mat-menu #remision="matMenu"> -->
-  <!-- <button mat-menu-item routerLink="/remision/listado" >Lista</button> -->
-  <!-- <button mat-menu-item routerLink="/remision/agregar">Agregar</button> -->
-<!-- </mat-menu> -->
+<button mat-button color="accent" [matMenuTriggerFor]="remision">Remisiòn</button>
+<mat-menu #remision="matMenu">
+  <button mat-menu-item routerLink="/remision/listado" >Lista</button>
+  <button mat-menu-item routerLink="/remision/agregar">Agregar</button>
+ </mat-menu>
 </mat-toolbar>
