--- a/src/app/cliente/eliminar-cli/eliminar-cli.component.html
+++ b/src/app/cliente/eliminar-cli/eliminar-cli.component.html
@@ -1,1 +1,25 @@
 <p>eliminar-cli works!</p>
+
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>
+            Esta seguro de eliminar este Cliente?
+        </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <mat-list>
+            <mat-list-item>
+                <b>Nombres:</b>{{cliente.nombre}
+            </mat-list-item>
+            <mat-divider></mat-divider>
+            
+        </mat-list>
+
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-flat-button (click)="cancelar()">Cancelar</button>
+        <button mat-raised-button color="warn" (click)="confirmar()">Confirmar</button>
+
+    </mat-card-actions>
+
+</mat-card>
