--- a/src/app/cliente/listar-cli/listar-cli.component.html
+++ b/src/app/cliente/listar-cli/listar-cli.component.html
@@ -23,8 +23,19 @@
       <th mat-header-cell *matHeaderCellDef>Telefono </th>
       <td mat-cell *matCellDef="let element"> {{element.telefono}} </td>
     </ng-container>
+
+    <!-- acciones Column -->
+    <ng-container matColumnDef="acciones">
+      <th mat-header-cell *matHeaderCellDef>Acciones </th>
+      <td mat-cell *matCellDef="let element"> 
+        <button (click)="actualizarCliente(element)" mat-raised-button color="warn">
+          <b>Editar</b>
+        </button>
+        <button [routerLink]="['eliminar-cli', element.id]" mat-raised-button color="accent"><b>Eliminar</b></button>
+      </td>
+    </ng-container>
   
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr> 
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
   
