--- a/src/app/empleado/listar-emp/listar-emp.component.html
+++ b/src/app/empleado/listar-emp/listar-emp.component.html
@@ -48,6 +48,13 @@
         <th mat-header-cell *matHeaderCellDef> Cargo </th>
         <td mat-cell *matCellDef="let element"> {{element.cargo}} </td>
       </ng-container>
+      <!-- acciones Column -->
+      <ng-container matColumnDef="acciones">
+        <th mat-header-cell *matHeaderCellDef> Acciones </th>
+        <td mat-cell *matCellDef="let element"> 
+          <button (click)="ActualizarProducto(element)" mat-raised-button color="primary" ><b>Editar</b></button>
+        </td>
+      </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
