--- a/src/app/producto/listar-pro/listar-pro.component.html
+++ b/src/app/producto/listar-pro/listar-pro.component.html
@@ -18,6 +18,13 @@
         <th mat-header-cell *matHeaderCellDef> Caracteristica </th>
         <td mat-cell *matCellDef="let element"> {{element.caracteristica}} </td>
       </ng-container>
+      <!-- acciones Column -->
+      <ng-container matColumnDef="acciones">
+        <th mat-header-cell *matHeaderCellDef> Acciones </th>
+        <td mat-cell *matCellDef="let element"> 
+          <button (click)="ActualizarProducto(element)" mat-raised-button color="primary" ><b>Editar</b></button>
+        </td>
+      </ng-container>
                           
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
