modulos de empleado editar

--- a/src/app/cliente/editar-cli/editar-cli.component.html
+++ b/src/app/cliente/editar-cli/editar-cli.component.html
@@ -23,8 +23,8 @@
 
 </mat-dialog-content>
 <mat-dialog-actions>
-    <!-- <button class="mat-raised-button" (click)="Cerrar()">Cerrar</button> -->
-    <!-- <button class="mat-raised-button mat-accent" (click)="Guardar()">Guardar</button> -->
+    <button class="mat-raised-button" (click)="Cerrar()">Cerrar</button>
+    <button class="mat-raised-button mat-accent" (click)="Guardar()">Guardar</button>
     
 </mat-dialog-actions>
 
