--- a/src/app/empleado/listar-emp/listar-emp.component.html
+++ b/src/app/empleado/listar-emp/listar-emp.component.html
@@ -52,7 +52,7 @@
       <ng-container matColumnDef="acciones">
         <th mat-header-cell *matHeaderCellDef> Acciones </th>
         <td mat-cell *matCellDef="let element"> 
-          <button (click)="ActualizarProducto(element)" mat-raised-button color="primary" ><b>Editar</b></button>
+          <button (click)="ActualizarEmpleado(element)" mat-raised-button color="primary" ><b>Editar</b></button>
         </td>
       </ng-container>
   
