--- a/src/app/remision/listar-rem/listar-rem.component.html
+++ b/src/app/remision/listar-rem/listar-rem.component.html
@@ -1,1 +1,78 @@
 <p>listar-rem works!</p>
+<div class="mat-elevation-z8">
+    <table mat-table [dataSource]="resultados">
+  
+      <!-- id Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> ID </th>
+        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      </ng-container>
+  
+      <!-- nombres Column -->
+      <ng-container matColumnDef="numRemision">
+        <th mat-header-cell *matHeaderCellDef> Numero Remision </th>
+        <td mat-cell *matCellDef="let element"> {{element.numRemision}} </td>
+      </ng-container>
+  
+      <!-- fecha Column -->
+      <ng-container matColumnDef="fecha">
+        <th mat-header-cell *matHeaderCellDef>Fecha </th>
+        <td mat-cell *matCellDef="let element"> {{element.fecha}} </td>
+      </ng-container>
+  
+      <!-- encargadoNom Column -->
+      <ng-container matColumnDef="encargadoNom">
+        <th mat-header-cell *matHeaderCellDef>Encargado </th>
+        <td mat-cell *matCellDef="let element"> {{element.encargadoNom}} </td>
+      </ng-container>
+
+      <!-- cliente Column -->
+      <ng-container matColumnDef="clienteNom">
+        <th mat-header-cell *matHeaderCellDef>Cliente </th>
+        <td mat-cell *matCellDef="let element"> {{element.clienteNom}} </td>
+      </ng-container>
+
+      <!-- cantidad Column -->
+      <ng-container matColumnDef="cantidad">
+        <th mat-header-cell *matHeaderCellDef>Cantidad </th>
+        <td mat-cell *matCellDef="let element"> {{element.cantidad}} </td>
+      </ng-container>
+
+      <!-- presentacion Column -->
+      <ng-container matColumnDef="presentacion">
+        <th mat-header-cell *matHeaderCellDef>Presentacion </th>
+        <td mat-cell *matCellDef="let element"> {{element.presentacion}} </td>
+      </ng-container>
+
+      <!-- Producto Column -->
+      <ng-container matColumnDef="productoNom">
+        <th mat-header-cell *matHeaderCellDef>Producto </th>
+        <td mat-cell *matCellDef="let element"> {{element.productoNom}} </td>
+      </ng-container>
+      <!-- observaciones Column -->
+      <ng-container matColumnDef="observaciones">
+        <th mat-header-cell *matHeaderCellDef>Observaciones </th>
+        <td mat-cell *matCellDef="let element"> {{element.observaciones}} </td>
+      </ng-container>
+
+      <!-- acciones Column -->
+      <ng-container matColumnDef="acciones">
+        <th mat-header-cell *matHeaderCellDef> Acciones </th>
+        <td mat-cell *matCellDef="let element"> 
+          <button (click)="ActualizarRemision(element)" mat-raised-button color="primary" ><b>Editar</b></button>
+          <button [routerLink]="['eliminar', element.id]" mat-raised-button color="warn">
+            <b>Eliminar</b>
+          </button>
+        </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                   showFirstLastButtons 
+                   aria-label="Select page of periodic elements">
+    </mat-paginator>
+  </div>
+  
